--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   background-color: #ffffff;
 }
 
+.brocks-and-racket-area {
+  position: absolute;
+  z-index: 1
+}
+
 .top {
 height: 65px;
 }
@@ -37,4 +42,20 @@ height: 65px;
   height: 15px;
   background-color: black;
   margin-left: 337px;
+}
+
+.ball-area {
+  position: absolute;
+  z-index: 2;
+}
+
+
+.ball {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  background-color: blue;
+  margin-top: 520px;
+  margin-left: 390px;
+
 }
